--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M3</version>
                 <configuration>
+                    <trimStackTrace>false</trimStackTrace>
                     <additionalClasspathElements>
                         <additionalClasspathElement>${basedir}/src/test/resources/ref_test/schemas.jar</additionalClasspathElement>
                     </additionalClasspathElements>
@@ -38,7 +40,7 @@
     </build>
 
     <properties>
-        <vertx.version>3.5.3</vertx.version>
+        <vertx.version>3.6.3</vertx.version>
     </properties>
 
     <dependencies>
@@ -46,12 +48,6 @@
             <groupId>io.vertx</groupId>
             <artifactId>vertx-core</artifactId>
             <version>${vertx.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.vertx</groupId>
-            <artifactId>vertx-unit</artifactId>
-            <version>${vertx.version}</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>io.vertx</groupId>
@@ -65,9 +61,15 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
             <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-junit5</artifactId>
+            <version>${vertx.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
