--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
     </build>
 
     <properties>
-        <vertx.version>3.6.3</vertx.version>
+        <vertx.version>4.0.0-SNAPSHOT</vertx.version>
     </properties>
 
     <dependencies>
@@ -53,6 +53,7 @@
             <groupId>io.vertx</groupId>
             <artifactId>vertx-codegen</artifactId>
             <version>${vertx.version}</version>
+            <classifier>processor</classifier>
         </dependency>
         <dependency>
             <groupId>io.vertx</groupId>
@@ -69,7 +70,7 @@
         <dependency>
             <groupId>io.vertx</groupId>
             <artifactId>vertx-junit5</artifactId>
-            <version>${vertx.version}</version>
+            <version>3.6.3</version>
             <scope>test</scope>
         </dependency>
         <dependency>
